// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Component - Header should render Header with color paper 1`] = `
<Box
  className="makeStyles-appBarContainer-11"
  component="header"
>
  <AppBar
    className="makeStyles-paperBackground-5 makeStyles-withoutShadow-3"
    color="inherit"
    component="div"
    position="static"
  >
    <Toolbar
      className="makeStyles-toolBar-1"
      component="nav"
    >
      <IconButton
        className="makeStyles-menuButton-2"
        color="inherit"
        edge="start"
      >
        <MenuIcon
          aria-label="Open left menu"
        />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-8 makeStyles-hideLoader-10"
    variant="indeterminate"
  />
</Box>
`;

exports[`Component - Header should render Header with type back 1`] = `
<Box
  className="makeStyles-appBarContainer-11"
  component="header"
>
  <AppBar
    className="makeStyles-defaultBackground-4 makeStyles-withoutShadow-3"
    color="inherit"
    component="div"
    position="static"
  >
    <Toolbar
      className="makeStyles-toolBar-1"
      component="nav"
    >
      <IconButton
        className="makeStyles-menuButton-2"
        color="inherit"
        edge="start"
      >
        <ArrowBackIcon
          aria-label="Return previous page"
        />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-8 makeStyles-hideLoader-10"
    variant="indeterminate"
  />
</Box>
`;

exports[`Component - Header should render Header with type menu 1`] = `
<Box
  className="makeStyles-appBarContainer-11"
  component="header"
>
  <AppBar
    className="makeStyles-defaultBackground-4 makeStyles-withoutShadow-3"
    color="inherit"
    component="div"
    position="static"
  >
    <Toolbar
      className="makeStyles-toolBar-1"
      component="nav"
    >
      <IconButton
        className="makeStyles-menuButton-2"
        color="inherit"
        edge="start"
      >
        <MenuIcon
          aria-label="Open left menu"
        />
      </IconButton>
    </Toolbar>
  </AppBar>
  <LinearProgress
    className="makeStyles-loaderShadow-8 makeStyles-hideLoader-10"
    variant="indeterminate"
  />
</Box>
`;
